--- a/k8s/lab7/spark-app-lab7.yml
+++ b/k8s/lab7/spark-app-lab7.yml
@@ -7,7 +7,7 @@ metadata:
 spec:
   type: Python
   pythonVersion: "3"
-  image: "ddulaev/lab7:latest"
+  image: "aandreev/lab7:latest"
   imagePullPolicy: Always
   mainApplicationFile: "local:///app/main.py"
   sparkVersion: "3.4.1"
